
Release 4.0.10 (unreleased)
===========================

Bug fixes:
----------

- Fixes for parallel runs in sedimentation source term with humid atmosphere
  model.

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model. 


Release 4.0.9 (26 Sep 2018)
===========================

Bug fixes:
----------

- Radiative model: fix GUI-defined BC selection between reflecting wall and
  prescribed flux BC for grey/black wall.

- Fix face external force projection with tensorial diffusion
  and porous models 1, 2.
  This was impacting cases with head losses, improved pressure interpolation,
  and scalar or tensorial volume porosity models (iporos=1, 2).

- Fix crash in some polygon triangulation cases.

- Fix spurious mapping of previous mass flux with order 1 in time scheme.

- GUI: fix failure to cleanly stop running computations on some
  systems (Mantis issue #242).

- Fix interlock in Syrthes coupling when combining surface and volume coupling.

- GUI: fix handling of exchange coefficient boundary conditions.

- Major fix in parallel when activating head losses and improved
  hydrostatic pressure algorithm (iphydr = 1).

- Fix possible crash or error when computing wall distance for 2D
  (single cell layer) meshes.

Release 4.0.8 (20 Jul 2017)
===========================

Bug fixes:
----------

- Fix for triangulation of warped faces issue.

- Fix crash using GUI-defined setup when some property labels re not defined."

- Fix launch error due to bad generation of hostsfile using SLURM in some
  cases (only when the MPI library used does not include SLURM support,
  which is seldom the case).

- GUI: fix name of wall thermal conductivity in radiative transfer node.

- Fix issue #183 (conjugate heat transfer with porosity).

- Fix for program launch when Coupling with Syrthes or self using srun launcher.

- Modify EnSight time output format to workarount ParaView reader bug for
  small time steps.

- Fix an issue with SGE batch manager support.
