@@ -849,8 +849,9 @@ if (st_prv_id .ge. 0) then
   enddo
 endif
 
-! Low Mach compressible algos (conservative in time). Same algo for cavitation.
-if (idilat.gt.1 .or. icavit.ge.0) then
+! Low Mach compressible algos (conservative in time).
+! Same algo for cavitation and compressible algorithm.
+if (ippmod(icompf).ge.0.or.idilat.gt.1.or.icavit.ge.0) then
   call field_get_val_prev_s(icrom, pcrom)
 
 ! Standard algo
