@@ -5,6 +5,9 @@ Release 4.0.10 (unreleased)
 Bug fixes:
 ----------
 
+- Compressible: fix density time scheme in transported passive scalar/vector
+   balance to ensure conservativity with compressible algorithm.
+
 - Fixes for parallel runs in sedimentation source term with humid atmosphere
   model.
 
